[FIX] Avoid virtual keyboard to squash viewport

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,3 @@
-.App {
-  height: 100%;
-}
-
 .App header{
   text-align: center;
   color: white;
